--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
+    "tailwindcss": "^3.4.1",
     "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
