--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -21,7 +22,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
+    "prettier": "^2.8.8",
     "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.3"
   },
